2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/benchmarks.mk (clean-local-bench): Use `if' to avoid
	error when `bench.mk' doesn't exist.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Convert the `mandel' demo to the new benchmark framework.

	* demo/mandel.c: Rename to...	
	* benchmarks/mandel/mandel.c: ...here. Change to become a
	benchmark.

	* benchmarks/mandel/mandel.d1,
	* benchmarks/mandel/mandel.d2,
	* benchmarks/mandel/Makefile.am: New.

	* benchmarks/Makefile.am,
	* demo/Makefile.am,
	* configure.ac: Update accordingly.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `blas' benchmarks with the new build tools.

	* benchmarks/blas/bench-daxpy.inputs,
	* benchmarks/blas/bench-saxpy.inputs: New.
	
	* benchmarks/blas/Makefile.am: Update to use the new framework.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Implement some automation to run benchmarks.
	
	* build-aux/genbench.sh,
	* build-aux/benchmarks.mk: New.

	* Makefile.am: Update accordingly.
	* configure.ac: Require bash.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Convert `blas' benchmarks code to new framework.
	
	* benchmarks/blas/blas-test-saxpy.c: Delete.
	
	* benchmarks/blas/bench-saxpy.c,
	* benchmarks/blas/bench-daxpy.c: New.

	* benchmarks/blas/axy.d1,
	* benchmarks/blas/axy.d2,	
	* benchmarks/blas/axy.d3: Example data for both `saxpy' and
	`daxpy'.

	* benchmarks/blas/Makefile.am: Update accordingly.
	
2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Start to implement the top-level benchmark program.
	
	* benchmarks/lib/benchmark.c,
	* benchmarks/lib/benchmark.h: New.
	
	* benchmarks/lib/Makefile.am: Compile library for multiple
	targets.

	* configure.ac: Check for `ranlib' since it is required for making
	libraries.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce `benchmark/lib' for benchmarking framework.
	
	* benchmarks/lib/Makefile.am: New.